# wowhead_llm

./: pyproject.toml  starter.py
data/: test_sharp.txt
